--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <p>Nuestro compromiso es brindar a nuestros visitantes una experiencia gastronómica inolvidable, rodeados de la belleza natural de Huancabamba.</p>
                     </div>
                     <div class="nosotros-image" data-aos="fade-left">
-                        <img src="https://via.placeholder.com/600x400" alt="Interior del Recreo Campestre El Refugio">
+                        <img src="img/p1.jpg" alt="Interior del Recreo Campestre El Refugio">
                     </div>
                 </div>
             </div>
