--- a/index.html
+++ b/index.html
@@ -375,6 +375,8 @@
                 <img src="img/p11.jpg" alt="" class="modal-img">
                 <img src="img/p21.jpg" alt="" class="modal-img">
                 <img src="img/p8.jpg" alt="" class="modal-img">
+                <img src="img/p45.jpg" alt="" class="modal-img">
+                
                 <img src="img/p3.jpg" alt="" class="modal-img">
                 <img src="img/p20.jpg" alt="" class="modal-img">
                 <img src="img/p25.jpg" alt="" class="modal-img">
